k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: viper-app-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "viper-app-cert"
    kubernetes.io/ingress.global-static-ip-name: "viper-app-ip"
  labels:
    app: viper-app
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: viper-app
            port:
              number: 3000
